Update dialogue option images in game.html

--- a/game.html
+++ b/game.html
@@ -81,9 +81,9 @@
 
     <!-- Dialogue Options (middle-right) -->
     <div class="options">
-        <img src="BoxOpt.png" class="option-btn" alt="Option 1">
-        <img src="BoxOpt.png" class="option-btn" alt="Option 2">
-        <img src="BoxOpt.png" class="option-btn" alt="Option 3">
+        <img src="ButtonD.png" class="option-btn" alt="Option 1">
+        <img src="ButtonD.png" class="option-btn" alt="Option 2">
+        <img src="ButtonD.png" class="option-btn" alt="Option 3">
     </div>
 
     <!-- Dialogue display box (bottom center) -->
