--- a/game.html
+++ b/game.html
@@ -88,7 +88,7 @@
 
     <!-- Dialogue display box (bottom center) -->
     <div class="dialogue-box">
-        <img src="dioBox.png" alt="Dialogue Box">
+        <img src="DBox.png" alt="Dialogue Box">
     </div>
 
     <!-- Optional text area inside the dialogue box -->
