Update dialogue in game.html

--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@ const dialogue = [
     "You: *yawn* man, what a dream... well great things don't last forever.",
     "You: Guess it's time to get up.",
     "You: Let's get dressed and start the day.",
-    "??? : Oh, you're finally awake."
+    "You: What to wear what to wear..."
 ];
 
 let index = 0;
