--- a/game.html
+++ b/game.html
@@ -111,6 +111,7 @@
         <div class="option-btn">
             <img src="ButtonD.png" alt="Markiplier Merch">
             <div class="option-label">Markiplier Merch</div>
+            <a href="Mark.html">
         </div>
     </div>
 
@@ -128,7 +129,7 @@ const dialogue = [
     "You: *yawn* man, what a dream... well great things don't last forever.",
     "You: Guess it's time to get up.",
     "You: Let's get dressed and start the day.",
-    "??? : Oh, you're finally awake."
+    "You: What to wear what to wear..."
 ];
 
 let index = 0;
