Convert option buttons to links for navigation

--- a/game.html
+++ b/game.html
@@ -97,23 +97,23 @@
 <body>
 
     <!-- Dialogue Options -->
-    <div class="options" id="optionsMenu">
-        <div class="option-btn">
-            <img src="ButtonD.png" alt="Casual">
-            <div class="option-label">Casual</div>
-        </div>
+    <div class="options">
+    <a href="CasualTL.html" class="option-btn">
+        <img src="ButtonD.png">
+        <div class="option-label">Casual</div>
+    </a>
 
-        <div class="option-btn">
-            <img src="ButtonD.png" alt="Y2K">
-            <div class="option-label">Y2K</div>
-        </div>
+    <a href="Y2KTL.html" class="option-btn">
+        <img src="ButtonD.png">
+        <div class="option-label">Y2K</div>
+    </a>
 
-        <div class="option-btn">
-            <img src="ButtonD.png" alt="Markiplier Merch">
-            <div class="option-label">Markiplier Merch</div>
-            <a href="Mark.html">
-        </div>
-    </div>
+    <a href="Mark.html" class="option-btn">
+        <img src="ButtonD.png">
+        <div class="option-label">Markiplier Merch</div>
+    </a>
+</div>
+
 
     <!-- Dialogue Box -->
     <div class="dialogue-box">
