--- a/Mark.html
+++ b/Mark.html
@@ -34,4 +34,171 @@
 
     .fade-overlay.active {
         opacity: 1;
-        pointer-
+        pointer-events: auto;
+    }
+
+    /* Dialogue Box */
+    .dialogue-box {
+        position: absolute;
+        bottom: 3%;
+        left: 50%;
+        transform: translateX(-50%) scale(0.95);
+        width: 70%;
+        max-width: 900px;
+        opacity: 0;
+        animation: popIn 0.6s ease forwards;
+    }
+
+    .dialogue-box img {
+        width: 100%;
+        display: block;
+    }
+
+    /* Dialogue text */
+    .dialogue-text {
+        position: absolute;
+        bottom: 13%;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 60%;
+        max-width: 750px;
+        text-align: left;
+        font-size: 1.65rem;
+        color: black;
+        font-weight: bold;
+        line-height: 1.35;
+        pointer-events: none;
+        opacity: 0;
+        animation: popIn 0.6s ease forwards;
+    }
+
+    @keyframes popIn {
+        from {
+            opacity: 0;
+            transform: translateX(-50%) scale(0.9);
+        }
+        to {
+            opacity: 1;
+            transform: translateX(-50%) scale(1);
+        }
+    }
+
+    /* Dialogue Options */
+    .options {
+        position: absolute;
+        top: 50%;
+        right: 4%;
+        transform: translateY(-50%);
+        display: none;
+        flex-direction: column;
+        gap: 20px;
+        z-index: 10;
+    }
+
+    .option-btn {
+        width: 260px;
+        position: relative;
+        display: block;
+        cursor: pointer;
+        transition: transform 0.2s ease;
+        text-decoration: none;
+    }
+
+    .option-btn:hover {
+        transform: scale(1.05);
+    }
+
+    .option-label {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        font-size: 1.4rem;
+        font-weight: bold;
+        pointer-events: none;
+        text-shadow: 1px 1px 2px black;
+    }
+</style>
+</head>
+
+<body>
+
+<div class="fade-overlay" id="fade"></div>
+
+<!-- Dialogue Options -->
+<div class="options" id="optionsMenu">
+    <a href="CasualTL.html" class="option-btn">
+        <img src="ButtonD.png">
+        <div class="option-label">Casual</div>
+    </a>
+
+    <a href="Y2KTL.html" class="option-btn">
+        <img src="ButtonD.png">
+        <div class="option-label">Y2K</div>
+    </a>
+
+    <a href="Mark.html" class="option-btn">
+        <img src="ButtonD.png">
+        <div class="option-label">Markiplier Merch</div>
+    </a>
+</div>
+
+<!-- Dialogue Box -->
+<div class="dialogue-box">
+    <img src="DBox.png">
+</div>
+
+<!-- Dialogue Text -->
+<div class="dialogue-text" id="dialogueText"></div>
+
+<script>
+const dialogue = [
+    "You: *yawn* man, what a dream... well great things don't last forever.",
+    "You: Guess it's time to get up.",
+    "You: Let's get dressed and start the day.",
+    "You: What to wear, what to wear..."
+];
+
+let index = 0;
+let sceneTransitioned = false;
+
+const dialogueText = document.getElementById("dialogueText");
+const optionsMenu = document.getElementById("optionsMenu");
+const fade = document.getElementById("fade");
+
+dialogueText.textContent = dialogue[index];
+
+document.body.addEventListener("click", advanceDialogue);
+document.querySelector(".dialogue-box").addEventListener("click", advanceDialogue);
+
+function advanceDialogue(event) {
+    if (event.target.closest(".option-btn")) return;
+
+    if (index < dialogue.length - 1) {
+        index++;
+        dialogueText.textContent = dialogue[index];
+
+        // retrigger pop animation
+        dialogueText.style.animation = "none";
+        dialogueText.offsetHeight;
+        dialogueText.style.animation = "popIn 0.4s ease forwards";
+    } else if (!sceneTransitioned) {
+        sceneTransitioned = true;
+
+        // Fade to black
+        fade.classList.add("active");
+
+        setTimeout(() => {
+            /* CHANGE THIS TO YOUR NEXT BACKGROUND */
+            document.body.style.backgroundImage = 'url("Artboard 2.png")';
+
+            fade.classList.remove("active");
+            optionsMenu.style.display = "flex";
+        }, 1000);
+    }
+}
+</script>
+
+</body>
+</html>
