Update dialogue in Mark.html

--- a/Mark.html
+++ b/Mark.html
@@ -87,6 +87,8 @@
 <script>
 /* SAVED DIALOGUE */
 const dialogue = [
-    "You: *yawn* man, what a dream...",
-    "You: Guess it's time to get up.",
-    "You: T
+    "You: Oh yeah, looking suave *phone ping*.",
+    "You: Huh, the new FNAF movie is out.",
+    "You: might aswell check it out, I already got the fit on"
+    "You: But before I head out..."
+    "You: I should take a hit from my Freddy Faz-Bong"
