--- a/Mark.html
+++ b/Mark.html
@@ -20,6 +20,21 @@
         cursor: pointer;
     }
 
+    /* Fade overlay */
+    .fade {
+        position: absolute;
+        inset: 0;
+        background: black;
+        opacity: 0;
+        transition: opacity 1s ease;
+        pointer-events: none;
+        z-index: 100;
+    }
+
+    .fade.active {
+        opacity: 1;
+    }
+
     /* Dialogue box */
     .dialogue-box {
         position: absolute;
@@ -28,6 +43,7 @@
         transform: translateX(-50%);
         width: 70%;
         max-width: 900px;
+        z-index: 10;
     }
 
     .dialogue-box img {
@@ -50,16 +66,35 @@
         pointer-events: none;
         user-select: none;
         animation: pop 0.4s ease;
+        z-index: 11;
     }
 
     @keyframes pop {
         from { opacity: 0; transform: translateX(-50%) scale(0.95); }
         to   { opacity: 1; transform: translateX(-50%) scale(1); }
     }
+
+    /* Sliding PNG */
+    .slide-in {
+        position: absolute;
+        bottom: 0;
+        left: -40%;
+        width: 40%;
+        transition: left 1s ease;
+        z-index: 5;
+    }
+
+    .slide-in.active {
+        left: 0;
+    }
 </style>
 </head>
 
 <body>
+
+<div class="fade" id="fade"></div>
+
+<img src="character.png" id="slideImage" class="slide-in" alt="Character">
 
 <div class="dialogue-box" id="dialogueBox">
     <img src="DBox.png" alt="Dialogue Box">
@@ -74,30 +109,49 @@ const dialogue = [
     "You: Huh, the new FNAF movie is out.",
     "You: Might as well check it out, I already got the fit on.",
     "You: But before I head out...",
-    "You: I should take a hit from my Freddy Faz-Bong..."
+    "You: I should take a hit from my Freddy Faz-Bong."
 ];
 
 let index = 0;
+let phase = "dialogue"; // dialogue → slide → transition
 
 const dialogueText = document.getElementById("dialogueText");
-const dialogueBox = document.getElementById("dialogueBox");
+const slideImage = document.getElementById("slideImage");
+const fade = document.getElementById("fade");
 
 /* Show first line */
 dialogueText.textContent = dialogue[index];
 
-/* Click anywhere (background or box) to progress */
-document.body.addEventListener("click", advanceDialogue);
-dialogueBox.addEventListener("click", advanceDialogue);
+document.body.addEventListener("click", advance);
 
-function advanceDialogue() {
-    if (index < dialogue.length - 1) {
-        index++;
-        dialogueText.textContent = dialogue[index];
+function advance() {
+    if (phase === "dialogue") {
+        if (index < dialogue.length - 1) {
+            index++;
+            dialogueText.textContent = dialogue[index];
 
-        /* retrigger pop animation */
-        dialogueText.style.animation = "none";
-        dialogueText.offsetHeight;
-        dialogueText.style.animation = "pop 0.4s ease";
+            dialogueText.style.animation = "none";
+            dialogueText.offsetHeight;
+            dialogueText.style.animation = "pop 0.4s ease";
+        } else {
+            phase = "slide";
+        }
+    }
+
+    else if (phase === "slide") {
+        slideImage.classList.add("active");
+        phase = "transition";
+    }
+
+    else if (phase === "transition") {
+        fade.classList.add("active");
+
+        setTimeout(() => {
+            document.body.style.backgroundImage = 'url("Artboard 2.png")';
+            fade.classList.remove("active");
+        }, 1000);
+
+        phase = "done";
     }
 }
 </script>
