--- a/Mark.html
+++ b/Mark.html
@@ -94,7 +94,7 @@
 
 <div class="fade" id="fade"></div>
 
-<img src="character.png" id="slideImage" class="slide-in" alt="Character">
+<img src="FazBong.png" id="slideImage" class="slide-in" alt="Character">
 
 <div class="dialogue-box" id="dialogueBox">
     <img src="DBox.png" alt="Dialogue Box">
