Update dialogue line for consistency

--- a/Mark.html
+++ b/Mark.html
@@ -109,7 +109,7 @@ const dialogue = [
     "You: Huh, the new FNAF movie is out.",
     "You: Might as well check it out, I already got the fit on.",
     "You: But before I head out...",
-    "You: I should take a hit from my Freddy Faz-Bong."
+    "You: I should take a hit from my Freddy Faz-Bong..."
 ];
 
 let index = 0;
