--- a/Mark.html
+++ b/Mark.html
@@ -99,7 +99,7 @@
 
 <div class="fade" id="fade"></div>
 
-<img src="character.png" id="slideImage" class="slide-in" alt="Character">
+<img src="FazBong.png" id="slideImage" class="slide-in" alt="Character">
 
 <div class="dialogue-box">
     <img src="DBox.png" alt="Dialogue Box">
@@ -161,7 +161,7 @@ function advance() {
         fade.classList.add("active");
 
         setTimeout(() => {
-            document.body.style.backgroundImage = 'url("Artboard 2.png")';
+            document.body.style.backgroundImage = 'url("Artboard 3.png")';
 
             slideImage.classList.remove("active");
             slideImage.classList.add("hide");
