--- a/Mark.html
+++ b/Mark.html
@@ -99,7 +99,7 @@
 
 <div class="fade" id="fade"></div>
 
-<img src="FazBong.png" id="slideImage" class="slide-in" alt="Character">
+<img src="character.png" id="slideImage" class="slide-in" alt="Character">
 
 <div class="dialogue-box">
     <img src="DBox.png" alt="Dialogue Box">
@@ -119,15 +119,12 @@ const dialogue1 = [
 
 /* SCENE 2 DIALOGUE */
 const dialogue2 = [
-    "You: ...DAYM this place is packed.",
-    "You: And the popcorn bucket is way more expensive than I thought.",
-    "You: At least they didn't notice the snacks in my pockets"
-    "???: Hey, Nice clothes...They're really stylish."
-    "You: (You're fucking shitting me)"
-    "MARKIPLIRER?!?!?!?"
-    "Mark: Usually I would introduce myself, but I see I need no introduction"
-    "You: Wow you're more humble in person"
-    "You: Sorry, im 
+    "You: ...Woah.",
+    "You: This place is super packed.",
+    "You: a shame the popcorn bucket stupid expens-"
+    "You: (no fucking way...)"
+    "MARKIPLIER?!?!?!?!"
+    "You: I have to talk to him
 ];
 
 let dialogue = dialogue1;
@@ -167,7 +164,7 @@ function advance() {
         fade.classList.add("active");
 
         setTimeout(() => {
-            document.body.style.backgroundImage = 'url("Artboard 3.png")';
+            document.body.style.backgroundImage = 'url("Artboard 2.png")';
 
             slideImage.classList.remove("active");
             slideImage.classList.add("hide");
