Fix dialogue string formatting in Mark.html

--- a/Mark.html
+++ b/Mark.html
@@ -124,7 +124,7 @@ const dialogue2 = [
     "You: a shame the popcorn bucket stupid expens-"
     "You: (no fucking way...)"
     "MARKIPLIER?!?!?!?!"
-    "You: I have to talk to him
+    "You: I have to talk to him"
 ];
 
 let dialogue = dialogue1;
